--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -42,3 +42,8 @@ font-weight: 400;
     margin-right: 2px;
     color: green;
 }
+
+.sidebar > hr{
+    margin: 10px 0;
+    border: 1px solid #49274b;
+}
